--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(twist_mux)
+project(ackermann_mux)
 
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
@@ -13,8 +13,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(visualization_msgs REQUIRED)
+find_package(ackermann_msgs REQUIRED)
 find_package(diagnostic_updater REQUIRED)
 
 include_directories(include)
@@ -23,25 +22,19 @@ set(
   DEPENDENCIES
   "rclcpp"
   "std_msgs"
-  "geometry_msgs"
-  "visualization_msgs"
+  "ackermann_msgs"
   "diagnostic_updater"
 )
 
-add_executable(twist_mux
-  src/twist_mux.cpp
-  src/twist_mux_node.cpp
-  src/twist_mux_diagnostics.cpp
+add_executable(ackermann_mux
+  src/ackermann_mux.cpp
+  src/ackermann_mux_node.cpp
+  src/ackermann_mux_diagnostics.cpp
 )
-ament_target_dependencies(twist_mux ${DEPENDENCIES})
-
-add_executable(twist_marker
-  src/twist_marker.cpp
-)
-ament_target_dependencies(twist_marker ${DEPENDENCIES})
+ament_target_dependencies(ackermann_mux ${DEPENDENCIES})
 
 install(
-  TARGETS twist_mux twist_marker
+  TARGETS ackermann_mux
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
