--- a/package.xml
+++ b/package.xml
@@ -21,9 +21,12 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
+  <depend>rclpy</depend>
+
   <depend>std_msgs</depend>
   <depend>ackermann_msgs</depend>
   <depend>diagnostic_updater</depend>
+  <depend>crsf_receiver_msg</depend>
 
   <test_depend>ament_lint_auto</test_depend>
 
@@ -33,6 +36,7 @@
   <test_depend>launch_testing</test_depend>
   <test_depend>launch_testing_ament_cmake</test_depend>
   <test_depend>launch_testing_ros</test_depend>
+  <!-- <exec_depend>python3-pybind11</exec_depend> -->
 
   <export>
     <build_type>ament_cmake</build_type>
